# kibana-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SSE_IMPLEMENTATION.md  SSE_TESTING_GUIDE.md  docker-compose.yml  example_sse_usage.py  pyproject.toml  quickstart-test-env.sh  requirements-dev.txt  run_sse_server.py  test-local.sh  test-workflow.sh  test_mcp.py  test_minimal.py  test_sse.py  test_sse_working.py  validate_cases.py
.github/workflows/: build-and-publish.yml  local-testing.yml
dev/: cases-api-spec.json
echo_mcp_server/: server.py
src/kibana_mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
src/kibana_mcp/models/: exception_models.py  rule_models.py
src/kibana_mcp/tools/: __init__.py  _utils.py  add_exception_list_to_rule.py  add_rule_exception_items.py  adjust_alert_status.py  associate_shared_exception_list.py  create_exception_list.py  find_rules.py  get_alerts.py  get_rule_exceptions.py
testing/: __init__.py  auth_events.ndjson  config.py  detection.py  docker-compose.yml  docker_utils.py  es_kb_setup.py  main.py  quickstart-test-env.sh  requirements-dev.txt  sample_rule.json  seed_data.py  trigger_document.json  utils.py
testing/tools/: README.md  test_all.py
testing/tools/alerts/: test_alert_tools.py
testing/tools/cases/: __init__.py  test_case_tools.py
testing/tools/endpoint/: README.md  test_endpoint_tools.py
testing/tools/exceptions/: test_exception_tools.py
testing/tools/rules/: test_rule_tools.py
testing/tools/saved_objects/: README.md  __init__.py  test_create_object.py  (+3 more)
(+46 files in other folders)
